GP-4318: Cleanup